# Mess-Management-System

./: .gitignore  CMakeLists.txt
include/: logindialog.h  mainwindow.h  meal.h  menu.h  menusuggestion.h  student.h  user.h  welcomewindow.h
src/: logindialog.cpp  main.cpp  mainwindow.cpp  meal.cpp  menu.cpp  menusuggestion.cpp  student.cpp  user.cpp  welcomewindow.cpp
ui/: login.ui  logindialog.ui  mainwindow.ui  register.ui  welcomewindow.ui
